After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707758 - v4l2: Incorrect UV plane stride value for NV12/NV21 formats
v4l2: Incorrect UV plane stride value for NV12/NV21 formats
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.9
Other Linux
: Normal major
: 1.1.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-09 11:45 UTC by Andreea Fulger
Modified: 2013-09-18 16:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
This is a patch that fixes the bug. (875 bytes, patch)
2013-09-09 11:45 UTC, Andreea Fulger
committed Details | Review

Description Andreea Fulger 2013-09-09 11:45:02 UTC
Created attachment 254474 [details] [review]
This is a patch that fixes the bug.

In the case of NV12/NV21 formats, the stride of both Y and UV planes is the same, whereas the formula used (gst_v4l2_buffer_pool_alloc_buffer) doesn't take into account this particularity.
Comment 1 Sebastian Dröge (slomo) 2013-09-09 12:47:34 UTC
commit 478f0dcfe7995876dc4437ae19ec30f6a2c02a9e
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Sep 9 14:46:42 2013 +0200

    v4l2bufferpool: Fix missing condition in previous commit

commit 1e7c3e45204e102a87348830a362ae682a4037b4
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Mon Sep 9 14:44:58 2013 +0200

    v4l2bufferpool: Also fix strides for other semi-planar video formats

commit 78adf28a61f6dd14bc5bf921cd57acc38e383241
Author: Andreea Fulger <andreea.fulger@parrot.com>
Date:   Mon Sep 9 14:41:42 2013 +0200

    v4l2bufferpool: Fix stride for NV12/NV21
    
    https://bugzilla.gnome.org/show_bug.cgi?id=707758