v4l2bufferpool: Fix stride for NV12/NV21

https://bugzilla.gnome.org/show_bug.cgi?id=707758